# beamer_template

./: .gitignore  CMakeLists.txt  LICENSE  README.md  UseLATEX.cmake  main.tex
b2html/: beamer2html.py  template.html
b2k/: beamer2keynote.py  insert_movie.scpt  insert_pdf_pages.scpt
fig/: dsp3d.mov  mach3d.mov
src/: alert_ex.tex  biblio.bib  figure_ex.tex  footfullcite_ex.tex  movie_ex.tex
src/config/: config.tex  custom-numeric-comp.bbx  first_slide.tex  footer.tex  last_slides.tex
