PROJECT(beamer_template NONE)
CMAKE_MINIMUM_REQUIRED(VERSION 3.2)
FIND_PACKAGE(PythonInterp)
INCLUDE(UseLATEX.cmake)

FILE(GLOB_RECURSE CONTENTS_FILES RELATIVE ${CMAKE_SOURCE_DIR} src/*.tex)

ADD_LATEX_DOCUMENT(
    main.tex
    TARGET_NAME ${CMAKE_PROJECT_NAME}
    INPUTS ${CONTENTS_FILES} src/config/custom-numeric-comp.bbx
    IMAGE_DIRS fig src/config/logos
    BIBFILES src/biblio.bib
    USE_BIBLATEX)

ADD_CUSTOM_COMMAND(TARGET pdf POST_BUILD
  COMMAND ${CMAKE_COMMAND} -E copy main.pdf ${CMAKE_SOURCE_DIR}/${CMAKE_PROJECT_NAME}.pdf
  COMMENT "Copying main.pdf to ${CMAKE_SOURCE_DIR}/${CMAKE_PROJECT_NAME}.pdf")

SET(EXTRACT extract)
FILE(MAKE_DIRECTORY ${CMAKE_BINARY_DIR}/${EXTRACT})
ADD_CUSTOM_TARGET(key DEPENDS ${CMAKE_SOURCE_DIR}/b2k/* main.key)
ADD_CUSTOM_COMMAND(OUTPUT main.key
  DEPENDS ${CMAKE_SOURCE_DIR}/b2k/* main.pdf
  COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_SOURCE_DIR}/b2k/* .
  COMMAND ${PYTHON_EXECUTABLE} beamer2keynote.py --in ${CMAKE_BINARY_DIR}/main.pdf --tmp-dir ${CMAKE_BINARY_DIR}/${EXTRACT} --src-dir ${CMAKE_SOURCE_DIR}
  COMMAND ${CMAKE_COMMAND} -E copy main.key ${CMAKE_SOURCE_DIR}/${CMAKE_PROJECT_NAME}.key
  COMMENT "Converting main.pdf to ${CMAKE_SOURCE_DIR}/${CMAKE_PROJECT_NAME}.key")
